--- a/public/index.html
+++ b/public/index.html
@@ -19,8 +19,9 @@
     <meta property="og:image" content="/img/meta-studio-og-image.jpg">
 
     <!-- Twitter -->
-    <meta property="twitter:card" content="summare_large_image">
-    <meta property="twitter:url" content="/">
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:site" content="@AsyncAPISpec">
+    <meta property="twitter:domain" content="https://studio.asyncapi.com">
     <meta property="twitter:title" content="AsyncAPI Studio">
     <meta property="twitter:description" content="Studio for AsyncAPI specification, where you can validate, view preview documentation, and generate templates from AsyncAPI document.">
     <meta property="twitter:image" content="/img/meta-studio-og-image.jpg">
