Add full url to og:url
Co-authored-by: Maciej Urbańczyk <urbanczyk.maciej.95@gmail.com>

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="/">
+    <meta property="og:url" content="https://studio.asyncapi.com/">
     <meta property="og:title" content="AsyncAPI Studio">
     <meta property="og:description" content="Studio for AsyncAPI specification, where you can validate, view preview documentation, and generate templates from AsyncAPI document.">
     <meta property="og:image" content="/img/meta-studio-og-image.jpg">
