chore: add meta tags for OG and Twitter (#170)
Co-authored-by: Maciej Urbańczyk <urbanczyk.maciej.95@gmail.com>

--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,27 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta name="title" content="AsyncAPI Studio">
     <meta
       name="description"
       content="Studio for AsyncAPI specification, where you can validate, view preview documentation, and generate templates from AsyncAPI document."
     />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://studio.asyncapi.com/">
+    <meta property="og:title" content="AsyncAPI Studio">
+    <meta property="og:description" content="Studio for AsyncAPI specification, where you can validate, view preview documentation, and generate templates from AsyncAPI document.">
+    <meta property="og:image" content="/img/meta-studio-og-image.jpg">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:site" content="@AsyncAPISpec">
+    <meta property="twitter:domain" content="https://studio.asyncapi.com">
+    <meta property="twitter:title" content="AsyncAPI Studio">
+    <meta property="twitter:description" content="Studio for AsyncAPI specification, where you can validate, view preview documentation, and generate templates from AsyncAPI document.">
+    <meta property="twitter:image" content="/img/meta-studio-og-image.jpg">
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon-194x194.png" />
 
     <title>AsyncAPI Studio</title>
