--- a/public/index.html
+++ b/public/index.html
@@ -28,10 +28,35 @@
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon-194x194.png" />
 
+    <link rel="stylesheet" type="text/css" href="css/preloader.css">
+
     <title>AsyncAPI Studio</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+
+    <div class="preloader">
+      <div class="preloader-body">
+        <div>
+          <img
+            class="inline-block h-20"
+            src="/img/logo-horizontal-white.svg"
+            alt="AsyncAPI Logo"
+          />
+          <span class="inline-block text-xl text-pink-500 font-normal italic tracking-wide -ml-1 transform translate-y-0.5">
+            studio
+          </span>
+          <span class="inline-block text-xs text-teal-500 font-normal tracking-wide ml-0.5 transform translate-y-0.5">
+            beta
+          </span>
+        </div>
+        <div class="cssload-container">
+          <div class="cssload-speeding-wheel"></div>
+        </div>
+        <p class="relative mt-3 text-xs">Loading...</p>
+      </div>
+    </div>
+
     <div id="root"></div>
   </body>
 </html>
