remove uneccesary classes

--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
 
-    <div id="preloader" class="preloader">
+    <div id="preloader">
       <div class="text-center">
         <div>
           <img
@@ -48,8 +48,8 @@
             beta
           </span>
         </div>
-        <div class="w-full text-center h-8">
-          <div class="preloader-speeding-wheel"></div>
+        <div class="w-full text-center h-8 -mt-5">
+          <div class="rotating-wheel"></div>
         </div>
       </div>
     </div>
