--- a/public/index.html
+++ b/public/index.html
@@ -44,7 +44,7 @@
           <span class="inline-block text-xl text-pink-500 font-normal italic tracking-wide -ml-2 transform translate-y-1">
             studio
           </span>
-          <span class="inline-block text-xs text-teal-500 font-normal tracking-wide -ml-0.5 transform translate-y-1">
+          <span class="inline-block text-xs text-teal-500 font-normal tracking-wide transform translate-y-1">
             beta
           </span>
         </div>
