feat: add splash (loading) screen (#178)

--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,28 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+
+    <div id="preloader">
+      <div class="text-center">
+        <div>
+          <img
+            class="inline-block h-24"
+            src="/img/logo-horizontal-white.svg"
+            alt="AsyncAPI Logo"
+          />
+          <span class="inline-block text-xl text-pink-500 font-normal italic tracking-wide -ml-2 transform translate-y-1">
+            studio
+          </span>
+          <span class="inline-block text-xs text-teal-500 font-normal tracking-wide transform translate-y-1">
+            beta
+          </span>
+        </div>
+        <div class="w-full text-center h-8 -mt-5">
+          <div class="rotating-wheel"></div>
+        </div>
+      </div>
+    </div>
+
     <div id="root"></div>
   </body>
 </html>
