add support for http

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,9 @@
       content="Studio for AsyncAPI specification, where you can validate, view preview documentation, and generate templates from AsyncAPI document."
     />
 
+    <!-- Remove that after switching to https in the server-api -->
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://studio.asyncapi.com/">
