feat: add support for configuring the base URL

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     <meta property="og:url" content="https://studio.asyncapi.com/">
     <meta property="og:title" content="AsyncAPI Studio">
     <meta property="og:description" content="Studio for AsyncAPI specification, where you can validate, view preview documentation, and generate templates from AsyncAPI document.">
-    <meta property="og:image" content="/img/meta-studio-og-image.jpg">
+    <meta property="og:image" content="%PUBLIC_URL%/img/meta-studio-og-image.jpg">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
@@ -24,7 +24,7 @@
     <meta property="twitter:domain" content="https://studio.asyncapi.com">
     <meta property="twitter:title" content="AsyncAPI Studio">
     <meta property="twitter:description" content="Studio for AsyncAPI specification, where you can validate, view preview documentation, and generate templates from AsyncAPI document.">
-    <meta property="twitter:image" content="/img/meta-studio-og-image.jpg">
+    <meta property="twitter:image" content="%PUBLIC_URL%/img/meta-studio-og-image.jpg">
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon-194x194.png" />
 
@@ -38,7 +38,7 @@
         <div>
           <img
             class="inline-block h-24"
-            src="/img/logo-horizontal-white.svg"
+            src="%PUBLIC_URL%/img/logo-horizontal-white.svg"
             alt="AsyncAPI Logo"
           />
           <span class="inline-block text-xl text-pink-500 font-normal italic tracking-wide -ml-2 transform translate-y-1">
