--- a/public/index.html
+++ b/public/index.html
@@ -38,12 +38,9 @@
         <div>
           <img
             class="inline-block h-24"
-            src="%PUBLIC_URL%/img/logo-horizontal-white.svg"
+            src="%PUBLIC_URL%/img/logo-studio.svg"
             alt="AsyncAPI Logo"
           />
-          <span class="inline-block text-xl text-pink-500 font-normal italic tracking-wide -ml-2 transform translate-y-1">
-            studio
-          </span>
           <span class="inline-block text-xs text-teal-500 font-normal tracking-wide transform translate-y-1">
             beta
           </span>
