--- a/public/index.html
+++ b/public/index.html
@@ -37,15 +37,15 @@
       <div class="text-center">
         <div>
           <img
-            class="inline-block h-24"
+            class="inline-block h-20"
             src="%PUBLIC_URL%/img/logo-studio.svg"
             alt="AsyncAPI Logo"
           />
-          <span class="inline-block text-xs text-teal-500 font-normal tracking-wide transform translate-y-1">
+          <span class="inline-block text-xs text-teal-500 font-normal tracking-wider transform translate-y-1.5 -translate-x-1 uppercase">
             beta
           </span>
         </div>
-        <div class="w-full text-center h-8 -mt-5">
+        <div class="w-full text-center h-8 -mt-2">
           <div class="rotating-wheel"></div>
         </div>
       </div>
