--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     <meta property="og:url" content="https://studio.asyncapi.com/">
     <meta property="og:title" content="AsyncAPI Studio">
     <meta property="og:description" content="Studio for AsyncAPI specification, where you can validate, view preview documentation, and generate templates from AsyncAPI document.">
-    <meta property="og:image" content="%PUBLIC_URL%/img/meta-studio-og-image.jpg">
+    <meta property="og:image" content="%PUBLIC_URL%/img/meta-studio-og-image.jpeg">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
@@ -24,7 +24,7 @@
     <meta property="twitter:domain" content="https://studio.asyncapi.com">
     <meta property="twitter:title" content="AsyncAPI Studio">
     <meta property="twitter:description" content="Studio for AsyncAPI specification, where you can validate, view preview documentation, and generate templates from AsyncAPI document.">
-    <meta property="twitter:image" content="%PUBLIC_URL%/img/meta-studio-og-image.jpg">
+    <meta property="twitter:image" content="%PUBLIC_URL%/img/meta-studio-og-image.jpeg">
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon-194x194.png" />
 
