--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,7 @@
             src="%PUBLIC_URL%/img/logo-studio.svg"
             alt="AsyncAPI Logo"
           />
-          <span class="inline-block text-xs text-teal-500 font-normal tracking-wider transform translate-y-1.5 -translate-x-1 uppercase">
+          <span class="inline-block text-xs text-teal-500 font-normal tracking-wider ml-1 transform translate-y-1.5 -translate-x-1 uppercase">
             beta
           </span>
         </div>
