--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     <meta property="og:url" content="https://studio.asyncapi.com/">
     <meta property="og:title" content="AsyncAPI Studio">
     <meta property="og:description" content="Studio for AsyncAPI specification, where you can validate, view preview documentation, and generate templates from AsyncAPI document.">
-    <meta property="og:image" content="%PUBLIC_URL%/img/meta-studio-og-image.jpg">
+    <meta property="og:image" content="%PUBLIC_URL%/img/meta-studio-og-image.jpeg">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
@@ -24,7 +24,7 @@
     <meta property="twitter:domain" content="https://studio.asyncapi.com">
     <meta property="twitter:title" content="AsyncAPI Studio">
     <meta property="twitter:description" content="Studio for AsyncAPI specification, where you can validate, view preview documentation, and generate templates from AsyncAPI document.">
-    <meta property="twitter:image" content="%PUBLIC_URL%/img/meta-studio-og-image.jpg">
+    <meta property="twitter:image" content="%PUBLIC_URL%/img/meta-studio-og-image.jpeg">
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon-194x194.png" />
 
@@ -37,18 +37,15 @@
       <div class="text-center">
         <div>
           <img
-            class="inline-block h-24"
-            src="%PUBLIC_URL%/img/logo-horizontal-white.svg"
+            class="inline-block h-20"
+            src="%PUBLIC_URL%/img/logo-studio.svg"
             alt="AsyncAPI Logo"
           />
-          <span class="inline-block text-xl text-pink-500 font-normal italic tracking-wide -ml-2 transform translate-y-1">
-            studio
-          </span>
-          <span class="inline-block text-xs text-teal-500 font-normal tracking-wide transform translate-y-1">
+          <span class="inline-block text-xs text-teal-500 font-normal tracking-wider ml-1 transform translate-y-1.5 -translate-x-1 uppercase">
             beta
           </span>
         </div>
-        <div class="w-full text-center h-8 -mt-5">
+        <div class="w-full text-center h-8 -mt-2">
           <div class="rotating-wheel"></div>
         </div>
       </div>
