--- a/apps/studio/public/index.html
+++ b/apps/studio/public/index.html
@@ -18,7 +18,7 @@
     <meta property="og:description" content="Studio for AsyncAPI specification, where you can validate, view preview documentation, and generate templates from AsyncAPI document.">
     <meta property="og:image" content="%PUBLIC_URL%/img/meta-studio-og-image.jpeg">
 
-    <!-- Twitter/ -->
+    <!-- Twitter/// -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:site" content="@AsyncAPISpec">
 
