--- a/apps/studio/public/index.html
+++ b/apps/studio/public/index.html
@@ -13,7 +13,7 @@
 
     <!-- Open Graph / Facebook/ -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://jovial-jalebi-77dbf2.netlify.app">
+    <meta property="og:url" content="https:ogimage--//jovial-jalebi-77dbf2.netlify.app">
     <meta property="og:title" content="AsyncAPI Studio">
     <meta property="og:description" content="Studio for AsyncAPI specification, where you can validate, view preview documentation, and generate templates from AsyncAPI document.">
     <meta property="og:image" content="%PUBLIC_URL%/img/meta-studio-og-image.jpeg">
@@ -22,7 +22,7 @@
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:site" content="@AsyncAPISpec">
 
-   <meta property="twitter:domain" content="https://jovial-jalebi-77dbf2.netlify.app">
+   <meta property="twitter:domain" content="https://ogimage--jovial-jalebi-77dbf2.netlify.app">
     <meta property="twitter:title" content="AsyncAPI Studio">
     <meta property="twitter:description" content="Studio for AsyncAPI specification, where you can validate, view preview documentation, and generate templates from AsyncAPI document.">
     <meta property="twitter:image" content="%PUBLIC_URL%/img/meta-studio-og-image.jpeg">
